--- a/src/main/webapp/MedWin/contact.html
+++ b/src/main/webapp/MedWin/contact.html
@@ -1,4 +1,7 @@
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
+<!--  taglib-->
 <html>
    <head>
       <!-- basic -->
@@ -9,10 +12,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Contact</title>
+      <title>회원가입페이지</title>
       <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
+    
       <!-- bootstrap css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
       <!-- style css -->
@@ -40,7 +42,7 @@
             <div class="row">
                <div class="col-sm-12">
                   <div class="header_top_main">
-                     <div class="call_text"><a href="#"><span class="padding_right0"><i class="fa fa-phone" aria-hidden="true"></i></span>  Call : +01 1234567890</a></div>
+                     <div class="call_text"><a href="#"><span class="padding_right0"><i class="fa fa-phone" aria-hidden="true"></i></span>문의번호 : +01 1234567890</a></div>
                      <div class="call_text_2"><a href="#"><span class="padding_right0"><i class="fa fa-envelope" aria-hidden="true"></i></span> demo@gmail.com</a></div>
                      <div class="call_text_1"><a href="#"><span class="padding_right0"><i class="fa fa-map-marker" aria-hidden="true"></i></span> Location</a></div>
                   </div>
@@ -60,7 +62,7 @@
                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ml-auto">
                      <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="index.jsp">Home</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -85,7 +87,7 @@
             <div class="custom_bg">
                <div class="custom_menu">
                   <ul>
-                     <li class="active"><a href="index.html">Home</a></li>
+                     <li class="active"><a href="index.jsp">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="treatment.html">Treatment</a></li>
                      <li><a href="doctors.html">Doctors</a></li>
@@ -95,7 +97,7 @@
                </div>
                <form class="form-inline my-2 my-lg-0">
                   <div class="search_btn">
-                     <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span class="signup_text">Login</span></a></li>
+                     <li><a href="로그인화면.html"><i class="fa fa-user" aria-hidden="true"></i><span class="signup_text">Login</span></a></li>
                      <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span class="signup_text">Sign Up</span></a></li>
                      <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                   </div>
@@ -110,14 +112,19 @@
             <div class="contact_section_2">
                <div class="row">
                   <div class="col-md-6">
-                     <h1 class="contact_taital">Get In Touch</h1>
+                     <h1 class="contact_taital">회원가입</h1>
                      <form action="">
                         <div class="mail_section_1">
-                           <input type="text" class="mail_text" placeholder="Name" name="Name">
-                           <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number"> 
-                           <input type="text" class="mail_text" placeholder="Email" name="Email">
-                           <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                           <div class="send_bt"><a href="#">SEND</a></div>
+                           <input type="text" class="mail_text" placeholder="이름" name="Name">
+                           <input type="text" class="mail_text" placeholder="아이디" name="Name">
+                           <input type="text" class="mail_text" placeholder="비밀번호" name="Name">
+                           <input type="text" class="mail_text" placeholder="NickName" name="Name">
+                           <input type="text" class="mail_text" placeholder="전화번호" name="Phone Number"> 
+                           <input type="text" class="mail_text" placeholder="이메일" name="Email">
+                           <input type="text" class="mail_text" placeholder="주소" name="Address">
+                           <!--textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea-->
+                           <div class="send_bt"><a href="index.jsp">가입하기</a></div>
+                           <c:if />
                         </div>
                      </form>
                   </div>
@@ -152,7 +159,7 @@
                            </li>
                            <li>
                               <a href="#"><i class="fa fa-phone" aria-hidden="true"></i>
-                              <span class="padding_15">Call : +01 1234567890</span></a>
+                              <span class="padding_15">문의번호 : +01 1234567890</span></a>
                            </li>
                            <li>
                               <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>
